less/ribbons.less
//
// Corner Ribbons
// --------------------------------------------------
// Main style
// --------------------------------------------------
.corner-ribbon-wrapper {
    position: relative;
    overflow: hidden;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
}

.corner-ribbon {
    width: 200px;
    padding: 10px;
    background: #e43;
    position: absolute;
    text-align: center;
    line-height: 1;
    color: #f0f0f0;
    z-index: 1;
}
/* Custom styles */
.corner-ribbon.shadow {
    box-shadow: 0 0 3px rgba(0, 0, 0, .3);
}
/* Different positions */

.corner-ribbon.top-left {
    transform-origin: top left;
    top: 100px;
    left: -40px;
    .rotate(-45deg);
}

.corner-ribbon.top-right {
    transform-origin: top right;
    top: 100px;
    right: -40px;
    left: auto;
    .rotate(45deg);
}

.corner-ribbon.bottom-left {
    transform-origin: bottom left;
    top: auto;
    bottom: 100px;
    left: -40px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

.corner-ribbon.bottom-right {
    transform-origin: bottom right;
    top: auto;
    right: -40px;
    bottom: 100px;
    left: auto;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}
/* Colors */

.corner-ribbon.white {
    background: @white;
    color: @grey-800;
}

.corner-ribbon.black {
    background: @black;
}

.corner-ribbon.grey {
    background: @grey;
}

.corner-ribbon.blue-grey {
    background: @blue-grey;
}

.corner-ribbon.red {
    background: @red;
}

.corner-ribbon.pink {
    background: @pink;
}

.corner-ribbon.purple {
    background: @purple;
}

.corner-ribbon.deep-purple {
    background: @deep-purple;
}

.corner-ribbon.indigo {
    background: @indigo;
}

.corner-ribbon.blue {
    background: @blue;
}

.corner-ribbon.light-blue {
    background: @light-blue;
}

.corner-ribbon.cyan {
    background: @cyan;
}

.corner-ribbon.teal {
    background: @teal;
}

.corner-ribbon.green {
    background: @green;
}

.corner-ribbon.light-green {
    background: @light-green;
}

.corner-ribbon.lime {
    background: @lime;
}

.corner-ribbon.orange {
    background: @orange;
}

.corner-ribbon.deep-orange {
    background: @deep-orange;
}

.corner-ribbon.yellow {
    background: @yellow;
}

.corner-ribbon.amber {
    background: @amber;
}

.corner-ribbon.brown {
    background: @brown;
}

